# prototome-web-ui

./: .gitignore  README.md  package-lock.json  pyproject.toml
.github/workflows/: build_frontend.yml  check_version.yml  lint.yml  release_and_attach_build.yml  tag_and_publish.yml  test_lint_type.yml
backend/: h264_rtp_track.py  main.py
backend/api/: acquisition_control.py  camera.py  config.py  stage.py
backend/services/: error.py  zmq_agent.py
dev/: config.json  instrument.py  instrument_server.py  web_ui_config copy.json  web_ui_config.json  zmq_agent.py
examples/: web_ui_config.json
frontend/: package-lock.json  package.json  vite.config.ts
frontend-pylasso/: index.html  package.json
frontend-pylasso/src/: main.tsx
frontend-pylasso/src/app/: provider.tsx  router.tsx
frontend-pylasso/src/app/routes/: about.tsx  home.tsx  not-found.tsx
frontend-pylasso/src/components/errors/: main.tsx
frontend-pylasso/src/components/layouts/: main-layout.tsx
frontend-pylasso/src/components/ui/: color-scheme-toggle.tsx  header.tsx  navbar.tsx
frontend-pylasso/src/config/: paths.ts
frontend-pylasso/src/features/camera-widget/: index.ts
frontend-pylasso/src/features/camera-widget/components/: camera-widget.tsx  lasso-control.tsx
frontend-pylasso/src/features/wafer-calibration/: index.ts
frontend-pylasso/src/features/wafer-calibration/components/: wafer-calibration.tsx
frontend-pylasso/src/stores/: themeStore.ts
frontend/src/: index.js  main.tsx
frontend/src/app/: App.js  App.tsx  index.tsx  provider.tsx  router.tsx
frontend/src/app/routes/: HomePage.tsx  PylassoPage.tsx  StagesPage.tsx
frontend/src/assets/: rjsf-spacing.css
frontend/src/components/: FilePathWidget.tsx
frontend/src/components/errors/: main.tsx
frontend/src/components/globalApiError/: GlobalApiError.tsx  index.ts
frontend/src/components/ui/ColorSchemeToggle/: ColorSchemeToggle.tsx
frontend/src/components/ui/Header/: Header.tsx
frontend/src/components/ui/NavBar/: NavBar.tsx
frontend/src/features/acquisitionControl/: index.js  index.ts
frontend/src/features/acquisitionControl/api/: stateControlApi.ts  stateControlApi.tsx
frontend/src/features/acquisitionControl/components/: StateControl.tsx
frontend/src/features/camera/: index.js  index.ts
frontend/src/features/camera/api/: cameraApi.tsx
frontend/src/features/camera/components/: CameraWidget.tsx  ControlRow.tsx
frontend/src/features/camera/stores/: frameSlice.tsx
frontend/src/features/camera/types/: cameraTypes.tsx
frontend/src/features/configuration/: index.js  index.ts
frontend/src/features/configuration/api/: prototomeConfigApi.ts  stateControlApi.tsx
frontend/src/features/configuration/assets/: rjsf-spacing.css
frontend/src/features/configuration/components/: PrototomeConfig.tsx  PrototomeConfigForm.tsx  StateControl.tsx
frontend/src/features/configuration/types/: PrototomeConfigTypes.tsx
frontend/src/features/pylasso/: index.ts
frontend/src/features/pylasso/api/: lassoCameraApi.ts
frontend/src/features/pylasso/components/: CameraControl.tsx  LassoCamera.tsx  LassoControl.tsx  WaferCalibrationControl.tsx
frontend/src/features/pylasso/types/: lasso.ts  wafer.ts
frontend/src/features/stage/: index.js  index.ts
frontend/src/features/stage/api/: stageApi.tsx
frontend/src/features/stage/components/: StageControl.tsx  StagePosVis.tsx  StageWidget.tsx
frontend/src/features/stage/hooks/: useStagePositions.tsx
frontend/src/features/stage/stores/: positionSlice.tsx  rangeSlice.tsx
frontend/src/features/stage/types/: stageTypes.tsx
frontend/src/features/stage/utils/: colorGrabber.tsx
frontend/src/lib/: client.tsx  react-query.ts
frontend/src/stores/: configStore.ts  dataChannelStore.tsx  prototomeConfigStore.tsx  stagePositionStore.tsx  store.tsx  themeStore.ts
frontend/src/types/: axisVariableMapping.tsx  configTypes.tsx  pageTypes.tsx  prototomeConfig.ts  prototomeConfigTypes.tsx
frontend/src/utils/: webRtcConnection.tsx
server/: pyproject.toml
server/src/prototome-web-ui/: main.py  prototome_web_ui_config_model.py
server/src/prototome-web-ui/api/: routes.py  webrtc.py
server/src/prototome_web_ui/: main.py  prototome_web_ui_config_model.py
server/src/prototome_web_ui/api/: routes.py  webrtc.py
(+4 files in other folders)
