[project]
name = "prototome-we-ui"
version = "0.1.0"
description = "Webpage for monitoring mouse watering metrics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyboard==0.13.5",
    "kazoo==2.10.0 ",
    "zmq==0.0.0",
    "uvicorn==0.35.0",
    "pydantic==2.11.7",
    "ruff",
    "pytest",
    "opencv-python>=4.12.0.88",
    "fastapi[standard]>=0.116.1",
    "aiortc>=1.13.0",
    "one-liner",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.uv.sources]
one-liner = { git = "https://github.com/AllenNeuralDynamics/one-liner.git", branch = "feat-serializer" }

