[build-system]
requires = ["uv_build>=0.8.22"]
build-backend = "uv_build"

[project]
name = "prototome-web-ui"
version = "0.1.0"
readme = "README.md"
description = "FastApi layer for React app."
requires-python = ">=3.12"
dependencies = [
    "zmq==0.0.0",
    "uvicorn==0.35.0",
    "pydantic==2.11.7",
    "fastapi>=0.128.0",
    "aiortc>=1.13.0",
    "one-liner",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.uv.sources]
one-liner = { git = "https://github.com/AllenNeuralDynamics/one-liner.git", rev = "main" }

[tool.uv.build-backend]
source-include = ["src/prototome_web_ui/dist/**"]